# Agentic_Browser_Extension

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json  system_prompt
backend/: .env.example  live_test_results.json  pyproject.toml  test_ollama_live.py  test_sprint1_unit.py  test_ws_client.py  test_ws_dense_page.py  test_ws_eval_path.py  test_ws_sellrclub.py
backend/src/agent_core/: __init__.py  config.py  logging.py
backend/src/agent_core/agent/: __init__.py  graph.py  llm_client.py  nodes.py  prompts.py
backend/src/agent_core/export/: __init__.py  detector.py  formatters.py  store.py
backend/src/agent_core/memory/: __init__.py  store.py
backend/src/agent_core/playwright/: __init__.py  __main__.py  action_executor.py  dom_extractor.py  orchestrator.py
backend/src/agent_core/schemas/: __init__.py  actions.py  agent.py  dom.py  messages.py
backend/src/agent_core/server/: __init__.py  __main__.py  app.py  key_vault.py  session.py  ws_handler.py
backend/src/agent_core/test_harness/: __init__.py  __main__.py  cli_runner.py  dom_capture.py
backend/src/agent_core/test_harness/golden_tests/: 01_google_search.json  02_wikipedia_navigate.json  03_contact_form.json  04_wikipedia_search.json  05_navigate_to_site.json
backend/src/agent_core/tools/: __init__.py  browser_tools.py
backend/tests/: conftest.py  test_graph.py  test_schemas.py  test_server.py
backend/tests/fixtures/dom_snapshots/: contact_form.json  github_explore.json  google_search.json  hackernews.json  imdb_top.json  wikipedia_article.json
dashboard/: package-lock.json  (+1 more)
(+30 files in other folders)
